dot env 적용을 위한 html -> ejs 변경, 불필요한 플러그인 삭제

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
         <title>Hello React!</title>
     </head>
     <body>
-        <div id="root">ihihi</div>
+        <div id="root"></div>
         <!-- Main -->
-        <script src="/static/first.js"></script>
+        <script src= '<%= process.env.HOST_URL %>/static/first.js'></script>
     </body>
 </html>
