--- a/views/second.ejs
+++ b/views/second.ejs
@@ -8,6 +8,6 @@
         <div id="root"></div>
 
         <!-- Main -->
-        <script src="/static/second.js"></script>
+        <script src= "<%= process.env.HOST_URL %>/static/second.js"></script>
     </body>
 </html>
