--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
     <body>
         <div id="root"></div>
         <!-- Main -->
-        <script src= '<%= process.env.HOST_URL %>/static/first.js'></script>
+        <script src= '<%= process.env.HOST_URL %>/static/test.js'></script>
     </body>
 </html>
