--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
     <head>
         <meta charset="UTF-8" />
         <title>Hello React!</title>
+        <style>
+            html[data-theme=dark]{
+                background-color: black;
+                color: white;
+            }
+        </style>
     </head>
     <body>
         <div id="root"
